--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="{{ url_for('add_recipe') }}">Add recipe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="modal" data-target="#exampleModal" >Login</a>
+                        <a class="nav-link" data-toggle="modal" data-target="#login_modal" >Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
@@ -63,16 +63,71 @@
     {% block content %} {% endblock %}
     
     
-    <!--Modal-->
+    <!--Login Modal-->
     
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="login_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header text-center">
-        <h5 class="modal-title">Sign in</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+      <br>
+      <div class="row modal-sign text-center">
+          <div class="col-12">
+              <h5 class="modal-title">Sign in</h5>
+          </div>
+           <div>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+          </div>
+
+      </div>
+      
+      <hr>
+      <div class="modal-body">
+        <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>username</label>
+                        <input type="text" class="form-control" name="username" placeholder="username" id="username" required data-validation-required-message="Please enter your username">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+                
+                 <div class="control-group">
+                    <div class="form-group floating-label-form-group controls">
+                        <label>password</label>
+                        <input type="password" class="form-control" name="password"  placeholder="password" id="password" required data-validation-required-message="Please enter your password">
+                        <p class="help-block text-danger"></p>
+                    </div>
+                </div>
+      </div>
+      <hr>
+      <div class="text-center">
+        <button type="button" class="btn btn-primary">Login</button>
+      </div>
+      <br>
+      <div >
+          <p class="text-center">Not a member? <a href="#" data-toggle="modal" data-dismiss="modal" data-target="#register_modal" class="blue-text">Sign Up</a></p>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
+
+    <!--Register Modal-->
+    
+<div class="modal fade" id="register_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <br>
+      <div class="row modal-sign text-center">
+          <div class="col-12">
+              <h5 class="modal-title">Sign up</h5>
+          </div>
+          <div>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+          </div>
       </div>
       <div class="modal-body">
         
@@ -84,8 +139,6 @@
                     </div>
                 </div>
                 
-                <!--Author name field-->
-                
                  <div class="control-group">
                     <div class="form-group floating-label-form-group controls">
                         <label>password</label>
@@ -95,13 +148,14 @@
                 </div>
       </div>
       <br>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Login</button>
-        
+      <div class="text-center">
+        <button type="button" class="btn btn-primary">Register</button>
       </div>
+      <br>
     </div>
   </div>
 </div>
+
 
      <!-- Footer -->
     <footer>
