login/register modals styled

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,6 +84,11 @@
   display: none; 
 }
 
+.modal-sign button{
+  position: absolute;
+  right: 15px;
+}
+
 .search_input input[type=text]:focus:not([readonly]) {
 border-bottom: 1px solid #4dd0e1;
 box-shadow: 0 1px 0 0 #4dd0e1;
