--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,16 +28,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('add_recipe') }}">Add recipe</a>
-                    </li>
+                    
+                    <!--When user is logged in has possibility to add new recipes-->
+
                     {% if user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}" data-target="#login_modal" >{{user}}</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('add_recipe') }}">Add recipe</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}" data-target="#login_modal" >Logout</a>
+                        </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="modal" data-target="#login_modal" >Login</a>
+                        <a class="nav-link" href="" data-toggle="modal" data-target="#login_modal" >Login</a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
@@ -87,7 +90,7 @@
 
       </div>
       <hr>
-      <form method=POST action="">
+      <form method=POST action="{{ url_for('login') }}">
           <div class="modal-body">
             <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
@@ -100,7 +103,7 @@
                      <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <label>password</label>
-                            <input type="password" class="form-control" name="password"  placeholder="password" id="password" required data-validation-required-message="Please enter your password">
+                            <input type="password" class="form-control" name="pass"  placeholder="password" id="password" required data-validation-required-message="Please enter your password">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
