added option to chose category

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-10 col-md-10 mx-auto">
-            <form  action='{{ url_for('insert_recipe')}}' enctype="multipart/form-data" method='POST' novalidate>
+            <form  action='{{ url_for('insert_recipe')}}'   method='POST' novalidate>
                 
                 <!--Recipe name field-->
                 
@@ -109,7 +109,7 @@
                 </div>
                 <br>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Add</button>
+                    <button type="submit" class="btn btn-primary" >Add</button>
                 </div>
         </form>
         </div>
