--- a/templates/layout.html
+++ b/templates/layout.html
@@ -95,7 +95,7 @@
             <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <label>username</label>
-                            <input type="text" class="form-control" name="username" placeholder="username" id="username" required data-validation-required-message="Please enter your username">
+                            <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                      <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <label>password</label>
-                            <input type="password" class="form-control" name="pass"  placeholder="password" id="password" required data-validation-required-message="Please enter your password">
+                            <input type="password" class="form-control" name="pass"  placeholder="password"  required data-validation-required-message="Please enter your password">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
@@ -144,7 +144,7 @@
             <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <label>username</label>
-                            <input type="text" class="form-control" name="username" placeholder="username" id="username" required data-validation-required-message="Please enter your username">
+                            <input type="text" class="form-control" name="username" placeholder="username"  required data-validation-required-message="Please enter your username">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                      <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <label>password</label>
-                            <input type="password" class="form-control" name="pass"  placeholder="password" id="pass" required data-validation-required-message="Please enter your password">
+                            <input type="password" class="form-control" name="pass"  placeholder="password" required data-validation-required-message="Please enter your password">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
