--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,27 @@
     <h1>Cook with Us</h1>
     <span class="subheading">Recipes created with passion and love</span> {% endblock %} {% block content %}
     <div class="container">
+        
+        <!--BAR with select and serch inputs-->
+        
         <div class="row">
             <div class="col-12 col-md-6">
-                
+                <form  method='POST' >
+                    <div class="row justify-content-center">
+                        <div class="col-8 input-group ">
+                              <select class="custom-select"  name="category_name" onchange="this.form.submit()">
+                                   <option value="" disabled selected>Choose Category</option>
+                                {% for cat in categories %}
+                                    <option value="{{ cat.category_name }}">{{ cat.category_name }}</option>
+                                {% endfor %}
+                              </select>
+                        </div>
+
+                    </div>
+                </form>
             </div>
             <div class="col-12 col-md-6">
-                <form   method='POST'>
+                <form  method='POST'>
                     <div class="row justify-content-end">
                         <div class="md-form mb-3 col-8 col-md-9 search_input" >
                           <input class="form-control " name="search_input" type="text" placeholder="Search" aria-label="Search"/>
@@ -22,6 +37,9 @@
             </div>
         </div>
         <hr>
+        
+        <!--ALL RECIPES-->
+        
         <div class="row text-center">
             {% for recipe in recipes %}
             <div class="col-lg-3 col-md-6 mb-4">
