--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,6 +85,10 @@
   position: absolute;
   right: 15px;
 }
+.modal i{
+    margin-top: 30px;
+    font-size: 25px;
+}
 
 .search_input input[type=text]:focus:not([readonly]) {
 border-bottom: 1px solid #4dd0e1;
