--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet" >
-     <link href="{{url_for('static',filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet"
-        type="text/css">
+    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/clean-blog.min.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <title>Appetite Food </title>
@@ -28,19 +27,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
-                    
+
                     <!--When user is logged in has possibility to add new recipes-->
 
                     {% if user %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('add_recipe') }}">Add recipe</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('logout') }}" data-target="#login_modal" >Logout</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('add_recipe') }}">Add recipe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}" data-target="#login_modal">Logout</a>
+                    </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="" data-toggle="modal" data-target="#login_modal" >Login</a>
+                        <a class="nav-link" href="" data-toggle="modal" data-target="#login_modal">Login</a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
@@ -51,10 +50,8 @@
         </div>
     </nav>
 
-      <!-- Page Header -->
-     {% block img %}
-
-    {% endblock %}
+    <!-- Page Header -->
+    {% block img %} {% endblock %}
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
@@ -65,109 +62,143 @@
             </div>
         </div>
     </div>
-     </header>
-   
-   
+    </header>
+    
+    <!--Alert modal-->
 
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <div class="modal fade" id="alert_modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <br>
+                <div class="modal-body">
+                    <div class="flashes text-center">
+                        {% for message in messages %}
+                        <h4>{{ message }}</h4>
+                        {% endfor %}
+                    </div>
+                </div>
+                <br>
+            </div>
+        </div>
+    </div>
+    {% endif %} {% endwith %}
     {% block content %} {% endblock %}
-    
-    
+
+
     <!--Login Modal-->
-    
+
     <div class="modal fade" id="login_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <br>
-      <div class="row modal-sign text-center">
-          <div class="col-12">
-              <h5 class="modal-title">Sign in</h5>
-          </div>
-           <div>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <br>
+                <div class="row modal-sign text-center">
+                    <div class="col-12">
+                        <h5 class="modal-title">Sign in</h5>
+                    </div>
+                    <div>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-          </div>
+                    </div>
 
-      </div>
-      <hr>
-      <form method=POST action="{{ url_for('login') }}">
-          <div class="modal-body">
-            <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>username</label>
-                            <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
-                            <p class="help-block text-danger"></p>
+                </div>
+                <hr>
+                <form method=POST action="{{ url_for('login') }}" novalidate>
+                    <div class="modal-body">
+                        <div class="control-group row">
+                            <div class="col-2 user_icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="form-group floating-label-form-group controls col-9">
+                                <label>username</label>
+                                <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+
+                        <div class="control-group row">
+                            <div class="col-2 pass_icon">
+                                <i class="fas fa-lock"></i>
+                            </div>
+                            <div class="form-group floating-label-form-group controls col-9">
+                                <label>password</label>
+                                <input type="password" class="form-control" name="pass" placeholder="password" required data-validation-required-message="Please enter your password">
+                                <p class="help-block text-danger"></p>
+                            </div>
                         </div>
                     </div>
-                    
-                     <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>password</label>
-                            <input type="password" class="form-control" name="pass"  placeholder="password"  required data-validation-required-message="Please enter your password">
-                            <p class="help-block text-danger"></p>
-                        </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Login</button>
                     </div>
-          </div>
-          <hr>
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary">Login</button>
-          </div>
-      </form>
-      <br>
-      <div >
-          <p class="text-center">Not a member? <a href="#" data-toggle="modal" data-dismiss="modal" data-target="#register_modal" class="blue-text">Sign Up</a></p>
-      </div>
-      
+                </form>
+                <br>
+                <div>
+                    <p class="text-center">Not a member? <a href="#" data-toggle="modal" data-dismiss="modal" data-target="#register_modal" class="blue-text">Register</a></p>
+                </div>
+
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 
 
     <!--Register Modal-->
-    
-<div class="modal fade" id="register_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <br>
-      <div class="row modal-sign text-center">
-          <div class="col-12">
-              <h5 class="modal-title">Sign up</h5>
-          </div>
-          <div>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+    <div class="modal fade" id="register_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <br>
+                <div class="row modal-sign text-center">
+                    <div class="col-12">
+                        <h5 class="modal-title">Sign up</h5>
+                    </div>
+                    <div>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
-          </div>
-      </div>
-      <form method=POST action="{{ url_for('register') }}">
-          <div class="modal-body">
-            <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>username</label>
-                            <input type="text" class="form-control" name="username" placeholder="username"  required data-validation-required-message="Please enter your username">
-                            <p class="help-block text-danger"></p>
-                        </div>
                     </div>
-                    
-                     <div class="control-group">
-                        <div class="form-group floating-label-form-group controls">
-                            <label>password</label>
-                            <input type="password" class="form-control" name="pass"  placeholder="password" required data-validation-required-message="Please enter your password">
-                            <p class="help-block text-danger"></p>
+                </div>
+                <form method=POST action="{{ url_for('register') }}">
+                    <div class="modal-body">
+                        <div class="control-group row">
+                            <div class="col-2 user_icon">
+                                <i class="fas fa-user"></i>
+                            </div>
+                            <div class="form-group floating-label-form-group controls col-9">
+                                <label>username</label>
+                                <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
+                                <p class="help-block text-danger"></p>
+                            </div>
                         </div>
-                    </div>
-          </div>
-          <br>
-          <div class="text-center">
-            <button type="submit" class="btn btn-primary">Register</button>
-          </div>
-      </form>
-      <br>
-    </div>
-  </div>
-</div>
 
-     <!-- Footer -->
+                        <div class="control-group row">
+                            <div class="col-2 pass_icon">
+                                <i class="fas fa-lock"></i>
+                            </div>
+                            <div class="form-group floating-label-form-group controls col-9">
+                                <label>password</label>
+                                <input type="password" class="form-control" name="pass" placeholder="password" required data-validation-required-message="Please enter your password">
+                                <p class="help-block text-danger"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </div>
+                </form>
+                <br>
+            </div>
+        </div>
+    </div>
+
+
+    <!--ALERT modal-->
+
+
+
+
+    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
