--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -48,7 +48,7 @@
                  <div class="control-group">
                     <div class="form-group floating-label-form-group controls">
                         <label>Author</label>
-                        <input type="text" class="form-control" name="author"  value="{{recipe.author}}" placeholder="Author" id="author" required data-validation-required-message="Please enter author name.">
+                        <input type="text" class="form-control" name="author"  value="{{recipe.author}}" placeholder="{{recipe.author}}" id="author" required data-validation-required-message="Please enter author name.">
                         <p class="help-block text-danger"></p>
                     </div>
                 </div>
