--- a/static/css/clean-blog.css
+++ b/static/css/clean-blog.css
@@ -383,12 +383,12 @@ footer .copyright {
 }
 
 .btn {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 800;
-  padding: 15px 25px;
+  padding: 8px 15px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  border-radius: 0;
+  border-radius: 8px;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
