--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
                     <div class="row justify-content-center">
                         <div class="col-8 input-group ">
                               <select class="custom-select"  name="category_name" onchange="this.form.submit()">
-                                   <option value="" disabled selected>Choose Category</option>
+                                   <option  disabled selected>Choose Category</option>
                                 {% for cat in categories %}
                                     <option value="{{ cat.category_name }}">{{ cat.category_name }}</option>
                                 {% endfor %}
@@ -27,7 +27,7 @@
                 <form  method='POST'>
                     <div class="row justify-content-end">
                         <div class="md-form mb-3 col-8 col-md-9 search_input" >
-                          <input class="form-control " name="search_input" type="text" placeholder="Search" aria-label="Search"/>
+                          <input class="form-control " name="search_input" type="text" placeholder="Recipe name" aria-label="Search"/>
                         </div>
                         <div class="col-4 col-md-3 flex-row-reverse">
                              <input class="btn btn-primary" type="submit" name="action" value="search"/>
