--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
     <link href="{{url_for('static',filename='vendor/fontawesome-free/css/all.min.css')}}" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/clean-blog.min.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/clean-blog.css')}}">
     <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css')}}">
     <title>Appetite Food </title>
 </head>
@@ -76,6 +76,7 @@
                         {% for message in messages %}
                         {% if user %}
                             <h4>{{ message }}{{ user }}</h4>
+                            <p>Right now you can add, edit and delete your recipes.</p>
                         {% else %}
                              <h4>{{ message }}</h4>
                         {% endif %}
@@ -116,7 +117,7 @@
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
-                                <label>username</label>
+                                <label>Username</label>
                                 <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -127,7 +128,7 @@
                                 <i class="fas fa-lock"></i>
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
-                                <label>password</label>
+                                <label>Password</label>
                                 <input type="password" class="form-control" name="pass" placeholder="password" required data-validation-required-message="Please enter your password">
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -170,7 +171,7 @@
                                 <i class="fas fa-user"></i>
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
-                                <label>username</label>
+                                <label>Username</label>
                                 <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
                                 <p class="help-block text-danger"></p>
                             </div>
@@ -181,7 +182,7 @@
                                 <i class="fas fa-lock"></i>
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
-                                <label>password</label>
+                                <label>Password</label>
                                 <input type="password" class="form-control" name="pass" placeholder="password" required data-validation-required-message="Please enter your password">
                                 <p class="help-block text-danger"></p>
                             </div>
