--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,9 @@
     padding-left: 8px;
 }
 
+#category_form{
+  margin-bottom: 20px;
+}
 .search_input input[type=text]:focus:not([readonly]) {
 border-bottom: 1px solid #4dd0e1;
 box-shadow: 0 1px 0 0 #4dd0e1;
