--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -113,7 +113,7 @@
                         </div>
                 </div>
                 <br>
-                <div class="form-group">
+                <div class="form-group text-center">
                     <button type="submit" class="btn btn-primary" id="sendMessageButton">Uptade</button>
                 </div>
         </form>
