--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
         
         <div class="row">
             <div class="col-12 col-md-6">
-                <form  method='POST' >
-                    <div class="row justify-content-center">
+                <form  method='POST' id="category_form">
+                    <div class="row ">
                         <div class="col-8 input-group ">
                               <select class="custom-select"  name="category_name" onchange="this.form.submit()">
                                    <option  disabled selected>Choose Category</option>
@@ -23,8 +23,9 @@
                     </div>
                 </form>
             </div>
-            <div class="col-12 col-md-6">
-                <form  method='POST'>
+            <br>
+            <div class="col-12 col-md-6 justify-content-center ">
+                <form  method='POST' id="search_form">
                     <div class="row justify-content-end">
                         <div class="md-form mb-3 col-8 col-md-9 search_input" >
                           <input class="form-control " name="search_input" type="text" placeholder="Recipe name" aria-label="Search"/>
