capital letters in login form and header font size changed

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -100,7 +100,7 @@
                 <br>
                 <div class="row modal-sign text-center">
                     <div class="col-12">
-                        <h5 class="modal-title">Sign in</h5>
+                        <h4 class="modal-title">Sign in</h4>
                     </div>
                     <div>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -118,7 +118,7 @@
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
                                 <label>Username</label>
-                                <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
+                                <input type="text" class="form-control" name="username" placeholder="Username" required data-validation-required-message="Please enter your username">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
                                 <label>Password</label>
-                                <input type="password" class="form-control" name="pass" placeholder="password" required data-validation-required-message="Please enter your password">
+                                <input type="password" class="form-control" name="pass" placeholder="Password" required data-validation-required-message="Please enter your password">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -156,7 +156,7 @@
                 <br>
                 <div class="row modal-sign text-center">
                     <div class="col-12">
-                        <h5 class="modal-title">Sign up</h5>
+                        <h4 class="modal-title">Sign up</h4>
                     </div>
                     <div>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -172,7 +172,7 @@
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
                                 <label>Username</label>
-                                <input type="text" class="form-control" name="username" placeholder="username" required data-validation-required-message="Please enter your username">
+                                <input type="text" class="form-control" name="username" placeholder="Username" required data-validation-required-message="Please enter your username">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                             </div>
                             <div class="form-group floating-label-form-group controls col-9">
                                 <label>Password</label>
-                                <input type="password" class="form-control" name="pass" placeholder="password" required data-validation-required-message="Please enter your password">
+                                <input type="password" class="form-control" name="pass" placeholder="Password" required data-validation-required-message="Please enter your password">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
