--- a/templates/layout.html
+++ b/templates/layout.html
@@ -140,7 +140,7 @@
                 </form>
                 <br>
                 <div>
-                    <p class="text-center">Not a member? <a href="#" data-toggle="modal" data-dismiss="modal" data-target="#register_modal" class="blue-text">Register</a></p>
+                    <p class="text-center">Not a member? <a href="#" data-toggle="modal" data-dismiss="modal" data-target="#register_modal" class="turquoise">Register</a></p>
                 </div>
 
             </div>
