--- a/templates/layout.html
+++ b/templates/layout.html
@@ -243,10 +243,10 @@
     </footer>
     
     <!-- START Bootstrap-Cookie-Alert -->
-<div class="alert text-center cookiealert" role="alert">
-    <b>Do you like cookies?</b> &#x1F36A; We use cookies to ensure you get the best experience on our website. <a href="https://cookiesandyou.com/" target="_blank">Learn more</a>
+<div class="alert text-center cookiealert" role="alert" id='cookie'>
+    <b>Do you like cookies?</b> &#x1F36A; We use cookies to ensure you get the best experience on our website. <a href="https://cookiesandyou.com/"  target="_blank" >Learn more</a>
 
-    <button type="button" class="btn btn-primary btn-sm acceptcookies" aria-label="Close">
+    <button type="button" class="btn btn-warning btn-sm acceptcookies" aria-label="Close">
         I agree
     </button>
 </div>
