--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,8 +9,16 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-        <form  method='POST' action="{{ url_for('send') }}" id="contact_form" novalidate>
+        {% with messages = get_flashed_messages() %} 
+        {% if messages %}
+            {% for message in messages %}
+            <p class="flashes">{{ message }}</p>
+            {% endfor %}
+        {% else %}
+          <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+        {% endif %} 
+        {% endwith %}
+        <form  method='POST' id="contact_form" novalidate>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Name</label>
