--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         
         <div class="row">
             <div class="col-12 col-md-6">
-                <form  method='POST' id="category_form">
+                <form  method='POST' class="category_form">
                     <div class="row ">
                         <div class="col-8 input-group ">
                               <select class="custom-select"  name="category_name" onchange="this.form.submit()">
