--- a/templates/results.html
+++ b/templates/results.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-12 col-md-6">
                 <form  method='POST' action='{{url_for("index")}}' >
-                    <div class="row justify-content-center">
+                    <div class="row">
                         <div class="col-8 input-group ">
                             <select class="custom-select"  name="category_name" onchange="this.form.submit()">
                                 <option value="" disabled selected>Choose Category</option>
@@ -24,7 +24,8 @@
                     </div>
                 </form>
             </div>
-            <div class="col-12 col-md-6">
+            <br>
+            <div class="col-12 col-md-6 justify-content-center">
                 <form  method='POST' action='{{url_for("index")}}'>
                     <div class="row justify-content-end">
                         <div class="md-form mb-3 col-8 col-md-9 search_input" >
