--- a/templates/contact.html
+++ b/templates/contact.html
@@ -34,18 +34,16 @@
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Message</label>
-              <textarea rows="5" class="form-control" placeholder="Message" form="contact_form" name="message" required data-validation-required-message="Please enter a message."></textarea>
+              <textarea rows="4" class="form-control" placeholder="Message" form="contact_form" name="message" required data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <br>
-          <div class="form-group">
+          <div class="form-group text-center">
             <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
           </div>
         </form>
       </div>
     </div>
   </div>
-
-  <hr>
     {% endblock %}
