--- a/templates/results.html
+++ b/templates/results.html
@@ -9,7 +9,7 @@
         
         <div class="row">
             <div class="col-12 col-md-6">
-                <form  method='POST' action='{{url_for("index")}}' >
+                <form  method='POST' action='{{url_for("index")}}' class="category_form">
                     <div class="row">
                         <div class="col-8 input-group ">
                             <select class="custom-select"  name="category_name" onchange="this.form.submit()">
@@ -42,6 +42,22 @@
         
         <!--SORTED RECIPES-->
         
+                {% with messages = get_flashed_messages(category_filter=["result"]) %} 
+                {% if messages %}
+                <div class="row">
+                    <div class="col-12 text-center">
+                    {% for message in messages %}
+                        {% if recipes_number==1 %}
+                           <p>There is {{ recipes_number }}  recipe {{ message }}</p> 
+                        {% else %}
+                            <p>There are {{ recipes_number }}  recipes {{ message }}</p>
+                        {% endif %}
+                    {% endfor %}
+                    </div>
+                </div>
+                {% endif %} 
+                {% endwith %}
+            
         <div class="row text-center">
             {% for recipe in recipes %}
             <div class="col-lg-3 col-md-6 mb-4">
